--- a/index.html
+++ b/index.html
@@ -41,17 +41,57 @@
                     <p class="info-description">Mary Hardy</p>
                 </div>
                 <div class="about-info">
-                    <p class="info-title">Email</p>
+                    <p class="info-title">Email:</p>
                     <p class="info-description">info@gmail.com</p>
                 </div>
                 <div class="about-info">
-                    <p class="info-title">Speciality</p>
+                    <p class="info-title">Speciality:</p>
                     <p class="info-description">Web Developer</p>
                 </div>
                 <div class="about-info">
-                    <p class="info-title">Location</p>
+                    <p class="info-title">Location:</p>
                     <p class="info-description">Dhaka, BD</p>
                 </div>            </div>
+        </section>
+
+
+        <!-- What I Do section-->
+        <section class="what-i-do">
+            <h3 class="section-title">What I Do</h3>
+            <p class="what-i-do-description">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.</p>
+
+
+            <!-- .skils-container>.skill*4>img+p.skill-title+p.skill-description>lorem15 -->
+
+            <div class="skils-container">
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="Picture of Vanilla JavaScript">
+                    <p class="skill-title">Vanilla JavaScript</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="Picture of React">
+                    <p class="skill-title">React</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="Picture of Node.js">
+                    <p class="skill-title">Node.js</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="Picture of MongoDB">
+                    <p class="skill-title">MongoDB</p>
+                    <p class="skill-description">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+
+
+        <!-- Resume section -->
+        <section class="resume">
+            <h3 class="section-title">A Summary of My Resume</h3>
+            
         </section>
     </main>
     <footer>
